--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  background-color: #0B2434;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main{
+  max-width: 500px;
+  height: 450px;
+  background-color: #F5F5F5;
+  margin: 100px auto;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+.title {
+  margin: 0;
+}
+.instruction{
+  max-width: 55%;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 40px;
+}
+
+.dice-container{
+  display: grid;
+  grid-template: 1fr 1fr/repeat(5, 1fr);
+  gap: 20px;
+}
+
+.die{
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 1.5px lightgray;
+}
+
+button{
+  border: none;
+  background-color: #5035FF;
+  border-radius: 5px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  width: 100px;
+  height: 45px;
+  font-size: 1.2rem;
+  margin-top: 30px;
 }
