--- a/src/App.css
+++ b/src/App.css
@@ -56,4 +56,13 @@ button{
 .timer{
   font-size: 16px;
   margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.timer > span {
+  width: 20px;
+  height: 20px;
+  text-align: center;
 }
