--- a/src/App.css
+++ b/src/App.css
@@ -58,11 +58,17 @@ button{
   margin-bottom: 15px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
+  color: #5035FF;
 }
 
 .timer > span {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+}
+
+.timer > .timer-text {
+  font-size: 12px;
   text-align: center;
 }
