--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,10 @@ button{
 }
 
 .timer{
-  font-size: 16px;
-  margin-bottom: 15px;
+  font-size: 20px;
   display: flex;
   justify-content: center;
+  margin-top: 8px;
   align-items: baseline;
   color: #5035FF;
 }
@@ -71,4 +71,8 @@ button{
 .timer > .timer-text {
   font-size: 12px;
   text-align: center;
+}
+
+.best-record > p{
+  margin: 10px 0 20px 0;
 }
